# agentify-toolkit

./: .env.example  .gitignore  ANTHROPIC.md  BACKLOG.md  BUILD.md  CHANGELOG.md  CLI.md  DESIGN.md  GOOGLE.md  MISTRAL.md  OPENAI.md  QUICKSTART.md  README.md  RUNTIME.md  TOOLS.md  XAI.md  build.sh  buildtest.sh  pyproject.toml
docs/: CLI_REFERENCE.md  GATEWAY.md  design.md
docs/providers/: DEEPSEEK.md  GITHUB.md  OLLAMA.md
examples/: README.md  agent.yaml  chat_agent.py  chat_agent_tool.py  client.py  random_user.yaml  simple_agent.py
examples/agents/: agentify_openai.yaml  agentify_x.yaml  anthropic.yaml  bedrock.yaml  buzz.yaml  cloud-engineer.yaml  deepseek.yaml  docker.yaml  gemini.yaml  github.yaml  github_phi4.yaml  grok.yaml  mistral.yaml  nadine.yaml  ollama.yaml  ollama_local.yaml  ollama_tool.yaml  openai.yaml  snoopy.yaml  woody.yaml  zurg.yaml
examples/agents/tools/: post_api.yaml  todo_api.yaml  user_api.yaml
examples/notebooks/: Agentify_Developer_Quickstart.ipynb  Agentify_YAML_Deep_Dive.ipynb
examples/solution/: internal_demo.yaml
examples/solution/tools/: add_numbers.py  add_numbers.yaml
src/agentify/: __init__.py  agentify.py  agents.py  cli.py  cli_config.py  specs.py  tool.py  tools.py  web.py
src/agentify/commands/: __init__.py  agent.py  deploy.py  provider.py  run.py  runtime.py  tool.py
src/agentify/providers/: __init__.py  anthropic.py  bedrock.py  deepseek.py  docker.py  google.py  mistral.py  ollama.py  ollama_local.py  openai.py  x.py
src/agentify/ui/: chat.html
src/agentify/utils/: env_manager.py
tests/cli_tests/: test_cli_agent_list.py  test_cli_agent_show.py  test_cli_provider_list.py  test_cli_run.py
